--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
         <p>Vagrant Base Box for Ubuntu Server 13.04 (Raring) x64 </p>
 
         <p class="view"><a href="https://github.com/zxaos/vagrantbox-raringServer64">View the Project on GitHub <small>zxaos/vagrantbox-raringServer64</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/zxaos/vagrantbox-raringServer64/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/zxaos/vagrantbox-raringServer64/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/zxaos/vagrantbox-raringServer64">View On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <h3>Ubuntu Server 13.04 Vagrant Base Box</h3>
@@ -48,7 +41,7 @@ It is using Ubuntu Server 13.04 x64, with</p>
 <li>Default Vagrant SSH support</li>
 </ul><p>It was last fully updated on April 29, 2013. However, since the VirtualBox Guest Utilties were installed via DKMS, there shouldn't be any problems running apt-get upgrade.</p>
 
-<p>You can download the most recent version from <a href="http://github.com/zxaos/vagrantbox-raringServer64">github.com/zxaos/vagrantbox-raringServer64</a></p>
+<p>You can download the most recent version from <a href="http://zxaos.github.io/vagrantbox-raringServer64/raringServer64.box">http://zxaos.github.io/vagrantbox-raringServer64/raringServer64.box</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/zxaos">zxaos</a></p>
@@ -56,6 +49,6 @@ It is using Ubuntu Server 13.04 x64, with</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
